# eft-external-cpp-old

./: .gitignore  CMakeLists.txt  EscapeFromTarkov.sln  README.md
include/: lazy_importer.hpp  memory.hpp  memory_handler.hpp  offset.hpp
resources/: localeEn_legacy.bytes
src/: CMakeLists.txt  feature.cpp  feature.hpp  graphics_handler.cpp  main.cpp  managers.cpp  math.cpp  math.hpp  memory_handler.cpp  render.cpp  render.hpp  render_backend.cpp  render_backend.hpp  settings.cpp  settings.hpp  utility.cpp  utility.hpp  world.cpp  world.hpp
src/NativeExternalTest/: NativeExternalTest.vcxproj  NativeExternalTest.vcxproj.filters  NightVision.h  ThermalVision.h  camera.hpp  component.hpp  game_object.hpp  graphics_handler.cpp  graphics_handler.hpp  imgui.ini  main.cpp  managers.cpp  managers.hpp  memory_handler.cpp  memory_handler.hpp  menu.cpp  menu.hpp  object.hpp  overlay.cpp  overlay.hpp  physical.hpp  process_state.cpp  process_state.hpp  raid_instance.cpp  raid_instance.hpp  render.cpp  render.hpp  scripting.hpp  scripts.cpp  scripts.hpp  settings.cpp  settings.hpp  string_t.hpp  transform.hpp  unity.hpp  utility.hpp
src/imgui/: CMakeLists.txt  imgui.h
src/scripting_types/: CMakeLists.txt  e_body_part.hpp  eft_profile.hpp  firearm_controller.hpp  physical.cpp  physical.hpp  player.cpp  player.hpp  player_body.hpp  playerbody.cpp  playerbody.hpp  proc_wep_anim.cpp  proc_wep_anim.hpp  procedural_weapon_animation.hpp  profile.cpp  profile.hpp  system_string.hpp
src/unity_types/: CMakeLists.txt  camera.cpp  camera.hpp  component.cpp  component.hpp  object.cpp  (+7 more)
(+49 files in other folders)
